[package]
name = "abccg"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = "15.1.0"
tree-sitter = "~0.20.10"
tree-sitter-CategorialGrammarIconic = { git = "https://github.com/aslemen/tree-sitter-CategorialGrammar", version = "0.0.0" }

[dev-dependencies]
rstest = "0.22.0"
